[package]
name = "rust-concurrency-programming"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }

[[bin]]
name="wait_async"
path="src/examples/wait_async.rs"


[[bin]]
name="counter"
path="src/examples/counter.rs"

[[bin]]
name="rw_counter"
path="src/examples/rw_counter.rs"


[[bin]]
name="message_pass"
path="src/examples/mpsc.rs"

[[bin]]
name="safe_collection"
path="src/examples/safe_collection.rs"